Two pages in the same process should not be able to play media stream backed video elements at the same time https://bugs.webkit.org/show_bug.cgi?id=220504

Reviewed by Eric Carlson.

Source/WebCore:

In case of ConcurrentPlaybackNotPermitted restrictions, we now make sure that media elements from different pages do not play concurrently.
We also make sure that a VideoAudio and Audio sessions can also pause each other so we update the check for same media session type accordingly.

Covered by API test.

* platform/audio/PlatformMediaSession.cpp:
(WebCore::isPlayingAudio):
(WebCore::PlatformMediaSession::canPlayConcurrently const):
* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::sessionWillBeginPlayback):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit/getUserMedia2.html: Added.


Canonical link: https://commits.webkit.org/233185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271670 268f45cc-cd09-0410-ab3c-d52691b4dbfc